--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/index.css">
+    <link rel="author" href="humans.txt">
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130887131-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-130887131-1');
+    </script>
 </head>
 
 <body>
@@ -60,7 +70,8 @@
                     </p>
                 </li>
                 <li>
-                    <iframe width="545" height="300" src="https://www.youtube.com/embed/aWMjUQFEGd0?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                  <iframe width="545" height="300" src="https://www.youtube.com/embed/aWMjUQFEGd0?controls=0" frameborder="0" allowfullscreen></iframe>
+                </li>
                 <li>
                     <img src="images/veterans-eat-free.gif" height="300" alt="Veterans eat free 365 days a year.">
                 </li>
