--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,16 @@
     <title>Donut Delights</title>
     <link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
-	<link rel="stylesheet" href="../styles/location.css">
+	<link rel="stylesheet" href="../styles/about.css">
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130887131-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-130887131-1');
+    </script>
 </head>
 
 <body>
