--- a/pages/location.html
+++ b/pages/location.html
@@ -10,6 +10,15 @@
     <link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
 	<link rel="stylesheet" href="../styles/location.css">
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130887131-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-130887131-1');
+    </script>
 </head>
 
 <body>
@@ -42,6 +51,10 @@
             </ul>
     </nav>
     
+    <div id=joke1>
+        <img src="../images/joke1.png" height=auto alt="Knock knock! Who's there? Donut! Donut who? Donut forget to stop by!" width=100%>
+    </div>
+    
     <main>
         <div class="content">
             <div id="title">
@@ -51,29 +64,20 @@
                 <img src="../images/storefront.jpg" height=300 alt="photo of storefront">
             </div>
             <div id="information">
+                <br>
+                <br>
+                <br>
                 <h2>Visit Us</h2>
                 <p>2112 Main St<br>
                 Urbana, IL 61801</p>
                 <h2>Hours</h2>
                 <p>7am—8pm Daily</p>
+                <br>
+                <br>
+                <br>
             </div>
-            <style>
-                #map {
-                    position: relative;
-                    padding-bottom: 100%;
-                    height: 0;
-                    overflow: hidden;
-                }   
-                #map iframe {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100% !important;
-                    height: 100% !important;
-                }
-            </style>
             <div id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.3299307826815!2d-88.21174638435772!3d40.11265028200019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd7751dfaea63%3A0x58a5129845daabdf!2s214+W+Main+St%2C+Urbana%2C+IL+61801!5e0!3m2!1sen!2sus!4v1543119405485" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.3299307826815!2d-88.21174638435772!3d40.11265028200019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd7751dfaea63%3A0x58a5129845daabdf!2s214+W+Main+St%2C+Urbana%2C+IL+61801!5e0!3m2!1sen!2sus!4v1543119405485" width=100% height=100% frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </main>
