--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,7 +57,7 @@
                 <h1>Wanna talk?</h1>
             </div>
             <div id="contactUs">
-                <form method="POST" action="success.html" onsubmit="return checkForm(this);">
+                <form action="https://formspree.io/dalton0michael@gmail.com" method="POST" action="success.html" onsubmit="return checkForm(this);">
                     <h2>Sign up for deals</h2>
                     <p>Subscribe to our newsletter below for the latest on our seasonal offerings and special events (*-required)</p>
                     <br>
