--- a/menu.html
+++ b/menu.html
@@ -62,28 +62,28 @@
             <div class="ism-slider" data-transition_type="fade" data-play_type="loop" data-buttons="false" id="my-slider">
                 <ol>
                     <li>
-                        <img src="ism/image/1544572501980_429217.jpg" alt="sprinkle donut">
+                        <img src="../ism/image/1544572501980_429217.jpg" alt="sprinkle donut">
                     </li>
                     <li>
-                        <img src="ism/image/1544572501840_758115.jpg" alt="filled donuts">
+                        <img src="../ism/image/1544572501840_758115.jpg" alt="filled donuts">
                     </li>
                     <li>
-                        <img src="ism/image/1544572501171_752565.jpg" alt="bull horns">
+                        <img src="../ism/image/1544572501171_752565.jpg" alt="bull horns">
                     </li>
                     <li>
-                        <img src="ism/image/1544572500781_435290.jpg" alt="assorted donuts in display case">
+                        <img src="../ism/image/1544572500781_435290.jpg" alt="assorted donuts in display case">
                     </li>
                     <li>
-                        <img src="ism/image/1544572525253_580505.jpg" alt="assorted donuts in shop window">
+                        <img src="../ism/image/1544572525253_580505.jpg" alt="assorted donuts in shop window">
                     </li>
                     <li>
-                        <img src="ism/image/1544572525955_96764.jpg" alt="crullers in display case">
+                        <img src="../ism/image/1544572525955_96764.jpg" alt="crullers in display case">
                     </li>
                     <li>
-                        <img src="ism/image/1544572525172_53212.jpg" alt="assorted donuts in display case">
+                        <img src="../ism/image/1544572525172_53212.jpg" alt="assorted donuts in display case">
                     </li>
                     <li>
-                        <img src="ism/image/1544572523389_197859.jpg" alt="frosted donuts">
+                        <img src="../ism/image/1544572523389_197859.jpg" alt="frosted donuts">
                     </li>
                 </ol>
             </div>
