--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,16 +62,16 @@
                     <p>Subscribe to our newsletter below for the latest on our seasonal offerings and special events (*-required)</p>
                     <br>
                     <div id="names_label">Name*</div>
-                    <textarea id="first_name" type="text" onkeyup="" placeholder="first" required></textarea>
-                    <textarea id="last_name" type="text" onkeyup="" placeholder="last" required></textarea>
+                    <textarea name="first name" id="first_name" type="text" onkeyup="" placeholder="first" required></textarea>
+                    <textarea name="last name" id="last_name" type="text" onkeyup="" placeholder="last" required></textarea>
                     <br>
                     <br>
                     <div id="email_label">E-mail*</div>
-                    <textarea id="email" type="email" onkeyup="" placeholder="netsurfer@email.com" required></textarea>
+                    <textarea name="email" id="email" type="email" onkeyup="" placeholder="netsurfer@email.com" required></textarea>
                     <br>
                     <br>
                     <div id="birthday_label">Birthday</div>
-                    <textarea id="birthday" type="date" onkeyup="Allow()" placeholder="mm/dd/yyyy"></textarea>
+                    <textarea name="birthday" id="birthday" type="date" onkeyup="Allow()" placeholder="mm/dd/yyyy"></textarea>
                     <br>
                     <br>
                     <input id="submit_button" type="submit" value="SUBMIT" onclick="insert()" />
