--- a/pages/contact.html
+++ b/pages/contact.html
@@ -86,7 +86,7 @@
     </main>
     
     <footer>
-        <h6>&copy; Donut Delights 2018 | Design: Michael Dalton</h6>
+        <h6>&copy; Donut Delights 2018 | Design: <a href="humans.txt">Michael Dalton</a></h6>
     </footer>
 </body>
 
