--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,7 @@
     </main>
     
     <footer>
-        <h6>&copy; Donut Delights 2018 | Design: Michael Dalton</h6>
+        <h6>&copy; Donut Delights 2018 | Design: <a href="humans.txt">Michael Dalton</a></h6>
     </footer>
 </body>
 
