--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     
     <footer>
-        <h6>&copy; Donut Delights 2018 | Design: Michael Dalton</h6>
+        <h6>&copy; Donut Delights 2018 | Design: <a href="humans.txt">Michael Dalton</a></h6>
     </footer>
 </body>
 
