--- a/pages/menu.html
+++ b/pages/menu.html
@@ -160,7 +160,7 @@
     </main>
     
     <footer>
-        <h6>&copy; Donut Delights 2018 | Design: <a href="humans.txt">Michael Dalton</a></h6>
+        <h6>&copy; Donut Delights 2018 | Design: <a href="../humans.txt">Michael Dalton</a></h6>
     </footer>
 </body>
 
