--- a/pages/menu.html
+++ b/pages/menu.html
@@ -109,12 +109,12 @@
                     <p>How was your latest visit?<br>(*-required)</p>
                     <br>
                     <div id="names_label">Name*</div>
-                    <textarea id="first_name" type="text" placeholder="first" autofocus required></textarea>
-                    <textarea id="last_name" type="text" placeholder="last" autofocus required></textarea>
+                    <textarea id="first_name" type="text" placeholder="first" required></textarea>
+                    <textarea id="last_name" type="text" placeholder="last" required></textarea>
                     <div id="subject_label">Subject*</div>
-                    <textarea id="subject" type="text" placeholder="what's this about?" autofocus required></textarea>
+                    <textarea id="subject" type="text" placeholder="what's this about?" required></textarea>
                     <div id="comments_label">Comment*</div>
-                    <textarea id="comment" type="text" onkeyup="Allow()" placeholder="tell everyone what you're thinking..." autofocus required></textarea>
+                    <textarea id="comment" type="text" onkeyup="Allow()" placeholder="tell everyone what you're thinking..."required></textarea>
                     <br>
                     <input style="font-size: 80%; padding: 3px;" type="submit" value="POST COMMENT" onclick="insert()" />
                     <br>
