--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,7 @@
     </nav>
     
     <div id=follow1>
-        <img src="../images/follow1.png" height=auto alt="Keep up! follow us on social media=" width=100%>
+        <img src="../images/follow1.png" height=auto alt="Keep up! follow us on social media=">
     </div>
     
     <main>
