--- a/pages/location.html
+++ b/pages/location.html
@@ -52,7 +52,7 @@
     </nav>
     
     <div id=joke1>
-        <img src="../images/joke1.png" height=auto alt="Knock knock! Who's there? Donut! Donut who? Donut forget to stop by!" width=100%>
+        <img src="../images/joke1.png" height=auto alt="Knock knock! Who's there? Donut! Donut who? Donut forget to stop by!">
     </div>
     
     <main>
