--- a/pages/menu.html
+++ b/pages/menu.html
@@ -54,7 +54,7 @@
     </nav>
     
     <div id=funfact1>
-        <img src="../images/funfact1.png" height=auto alt="Fun fact: the first donut machine wasn't created until 1920" width=100%>
+        <img src="../images/funfact1.png" height=auto alt="Fun fact: the first donut machine wasn't created until 1920">
     </div>
     
     <main>
