--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
     <main>
         <div class="content">
             <div id=funfact2>
-                <img src="../images/funfact2.png" height=auto alt="Fun fact: the largest doughnut ever made was an American-style jelly donut weighing 1.7 tons">
+                <img src="../images/funfact2.png" alt="Fun fact: the largest doughnut ever made was an American-style jelly donut weighing 1.7 tons">
             </div>
             <div id="title">
                 <h1>History</h1>
