--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,23 +56,23 @@
     <main>
         <div class="content">
             <div id=follow1>
-                <img src="../images/follow1.png" height=auto alt="Keep up! follow us on social media=">
+                <img src="../images/follow1.png" alt="Keep up! follow us on social media=">
             </div>
             <div id="title">
                 <h1>Wanna talk?</h1>
             </div>
             <div id="contactUs">
-                <form action="https://formspree.io/dalton0michael@gmail.com" method="POST" action="success.html" onsubmit="return checkForm(this);">
+                <form action="https://formspree.io/dalton0michael@gmail.com" method="POST" onsubmit="return checkForm(this);">
                     <h2>Sign up for deals</h2>
                     <p>Subscribe to our newsletter below for the latest on our seasonal offerings and special events (*-required)</p>
                     <br>
                     <div id="names_label">Name*</div>
-                    <textarea name="first name" id="first_name" type="text" onkeyup="" placeholder="first" required></textarea>
-                    <textarea name="last name" id="last_name" type="text" onkeyup="" placeholder="last" required></textarea>
+                    <textarea name="first name" id="first_name" onkeyup="" placeholder="first" required></textarea>
+                    <textarea name="last name" id="last_name" onkeyup="" placeholder="last" required></textarea>
                     <div id="email_label">E-mail*</div>
-                    <textarea name="email" id="email" type="email" onkeyup="" placeholder="netsurfer@email.com" required></textarea>
+                    <textarea name="email" id="email" onkeyup="" placeholder="netsurfer@email.com" required></textarea>
                     <div id="birthday_label">Birthday</div>
-                    <textarea name="birthday" id="birthday" type="date" onkeyup="Allow()" placeholder="mm/dd/yyyy"></textarea>
+                    <textarea name="birthday" id="birthday" onkeyup="Allow()" placeholder="mm/dd/yyyy"></textarea>
                     <br>
                     <input style="font-size: 80%; padding: 3px;" id="submit_button" type="submit" value="SUBMIT" onclick="insert()" />
                 </form>
