--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </p>
                 </li>
                 <li>
-                  <iframe width="545" height="300" src="https://www.youtube.com/embed/aWMjUQFEGd0?controls=0" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="545" height="300" src="https://www.youtube.com/embed/aWMjUQFEGd0?controls=0"  allowfullscreen></iframe>
                 </li>
                 <li>
                     <img src="images/veterans-eat-free.gif" height="300" alt="Veterans eat free 365 days a year.">
