--- a/pages/location.html
+++ b/pages/location.html
@@ -52,7 +52,7 @@
     </nav>
     
     <div id=joke1>
-        <img src="../images/joke1.png" height=auto alt="Knock knock! Who's there? Donut! Donut who? Donut forget to stop by!">
+        <img src="../images/joke1.png" alt="Knock knock! Who's there? Donut! Donut who? Donut forget to stop by!">
     </div>
     
     <main>
@@ -77,7 +77,7 @@
                 <br>
             </div>
             <div id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.3299307826815!2d-88.21174638435772!3d40.11265028200019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd7751dfaea63%3A0x58a5129845daabdf!2s214+W+Main+St%2C+Urbana%2C+IL+61801!5e0!3m2!1sen!2sus!4v1543119405485" width=100% height=100% frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.3299307826815!2d-88.21174638435772!3d40.11265028200019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd7751dfaea63%3A0x58a5129845daabdf!2s214+W+Main+St%2C+Urbana%2C+IL+61801!5e0!3m2!1sen!2sus!4v1543119405485" width=100% height=100% style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </main>
