--- a/pages/contact.html
+++ b/pages/contact.html
@@ -70,7 +70,7 @@
                     <textarea name="first name" id="first_name" onkeyup="" placeholder="first" required></textarea>
                     <textarea name="last name" id="last_name" onkeyup="" placeholder="last" required></textarea>
                     <div id="email_label">E-mail*</div>
-                    <textarea name="email" id="email" onkeyup="" placeholder="netsurfer@email.com" required></textarea>
+                    <input type="email" name="email" id="email" onkeyup="" placeholder="netsurfer@email.com" required>
                     <div id="birthday_label">Birthday</div>
                     <textarea name="birthday" id="birthday" onkeyup="Allow()" placeholder="mm/dd/yyyy"></textarea>
                     <br>
